fix alignment in navbar

--- a/src/components/ContentWrapper/Navigation/Navigation.scss
+++ b/src/components/ContentWrapper/Navigation/Navigation.scss
@@ -22,6 +22,8 @@
 .nav-links {
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-link {
